R-1: Adds requires configurations and services

--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <title>Rain WEB APP </title>
-    <link rel="stylesheet" href="./assets/vendors/icomoon-v1.0/icomoon.css">
+    <link rel="stylesheet" href="/assets/vendors/icomoon-v1.0/icomoon.css">
 </head>
 
 <body>
