--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" type="image/x-icon" href="/assets/images/favicon.ico">
-    <title>Rain WEB APP </title>
+    <title>Rain</title>
     <link rel="stylesheet" href="/assets/vendors/icomoon-v1.0/icomoon.css">
 </head>
 
